delete node endpoint
